# PPTPlaner

./: .gitignore  AGENTS.md  GEMINI.md  PPTPlaner.bat  QUICKSTART.md  README.md  START_HERE.bat  config.yaml  config.yaml.example  docker-compose.video.yml  findings.md  launcher.py  note_example.md  orchestrate_old.py  progress.md  pyproject.toml  pytest.ini  requirements.txt  run_ui.py  setup_windows.bat  setup_windows.ps1  task_plan.md  test_agy_multiple.py  test_agy_rapid.py  video_env_check.json
.antigravitycli/: 8b1236e5-bff2-4658-9bee-62361272d4f8.json
agents/: __init__.py  antigravity.py  base.py  claude.py  error_parser.py  exceptions.py  factory.py  logging_config.py  model_detector.py  openai_compatible.py  openai_direct.py  performance.py  registry.py  retry.py
case/: FOR_HUMAN.md  QUICKSTART.md  action_log.jsonl
docs/: AGENT_MIGRATION_BDD.md  AGENT_MIGRATION_PLAN.md  AGENT_MIGRATION_SDD.md  AGENT_MIGRATION_TASK_PLAN.md  AGENT_MIGRATION_TDD.md  ARCHITECTURE_VIDEO.md  HEALTH_CHECK_REPORT.md  USAGE_zh-TW.md  UX_IMPROVEMENT_REPORT.md  VIDEO_PIPELINE_FINAL_SUMMARY.md  VIDEO_PIPELINE_INDEX.md  VIDEO_PIPELINE_PHASE1_SUMMARY.md  VIDEO_PIPELINE_PHASE2_ROADMAP.md  VIDEO_PIPELINE_SETUP_GUIDE.md  VIDEO_PIPELINE_WORKFLOW.md  markdown-conversion.md
reference/: CASE_Framework_for_agents.md  DISTILLATION_GUIDE.md
scripts/: COMBINE_SLIDES_HERE.bat  build_guide.py  check_video_env.py  cli_helper.py  combine_slides.py  config_migrator.py  guide.html.j2  install.ps1  orchestrate.py  resume_svg_generation.py  review_report.py  run_combiner_ui.py  validate.py  (+1 more)
(+119 files in other folders)
