[project]
name = "pptplaner"
version = "3.9.1"
description = "AI Presentation Generator - Turning documents into structured slides and notes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.5",
    "markdown-it-py>=3.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.31.0",
    "pywinpty>=3.0.0",  # Required for antigravity CLI TTY support
]

# CLI Entry Points
[project.scripts]
pptplaner = "scripts.orchestrate:main"
pptplaner-video = "scripts.video_pipeline:main"
pptplaner-video-check = "scripts.check_video_env:main"

# Optional dependencies for development
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
